adding media queries part-1

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <li><a href="/about.html" target="_blank" class="navbar-link about-link">About </a></li>
         <li><a href="/service.html" target="_blank" class="navbar-link services-link">Services</a></li>
         <li><a href="#portfolio" class="navbar-link portfolio-link">Portfolio</a></li>
-        <li><a href="/contact.html" target="_blank" class="navbar-link contact-link" >Contact</a></li>
+        <li><a href="/contact.html" target="_blank" class="navbar-link contact-link">Contact</a></li>
       </ul>
     </nav>
 
@@ -62,7 +62,7 @@
     </section>
   </main>
 
- <!-- ======================================== 
+  <!-- ======================================== 
           Our BioData Section Start  
     ======================================== -->
 
@@ -473,7 +473,7 @@
   </section>
 
   <!-- ======================================== 
-          Our Freelancing  Section Start  
+          Our Contact Us  Section Start  
     ========================================  -->
 
   <section class="section section-contact">
@@ -482,26 +482,27 @@
     </div>
 
     <div class="section-contact-main contact-container">
-      <form action="#">
+      <form action="https://formspree.io/f/mbjwzqyb" method="POST">
         <div class="grid grid-two-column">
           <div>
             <label for="username"></label>
-            <input type="text" name="username" placeholder="Username" id="username">
+            <input type="text" name="username" autocomplete="off" required placeholder="Username" id="username">
           </div>
           <div>
             <label for="email"></label>
-            <input type="text" name="email" placeholder="example@gmail.com" id="email">
+            <input type="email" name="email" autocomplete="off" required placeholder="example@gmail.com" id="email">
           </div>
         </div>
 
         <div>
           <label for="subject"></label>
-          <input type="text" name="subject" id="subject" placeholder="Subject">
+          <input type="text" name="subject" autocomplete="off" required id="subject" placeholder="Subject">
         </div>
 
         <div>
           <label for="textarea"></label>
-          <textarea name="textarea" id="textarea" cols="30" rows="10"></textarea>
+          <textarea name="textarea" autocomplete="off" required id="textarea" minlength="5" cols="30"
+            rows="10"></textarea>
         </div>
 
         <div>
@@ -516,103 +517,131 @@
           Our Footer  Section Start  
     ========================================  -->
 
-    <footer class="section section-footer">
-      <div class="container grid grid-four-column">
-        <div class="f-about">
-          <h3>About</h3>
-          <p>We have tested a number of registry fix and clean utilities and present our top 3 list on our site for your convenience. Hope you like it.</p>
-        </div>
-        <!-- end -->
-        <div class="f-links">
-          <h3>Links</h3>
-          <ul>
-            <li><span><ion-icon name="arrow-forward-outline"></ion-icon></span><a href="/index.html">Home</a>
-            </li>
+  <footer class="section section-footer">
+    <div class="container grid grid-four-column">
+      <div class="f-about">
+        <h3>About</h3>
+        <p>We have tested a number of registry fix and clean utilities and present our top 3 list on our site for your
+          convenience. Hope you like it.</p>
+      </div>
+      <!-- end -->
+      <div class="f-links">
+        <h3>Links</h3>
+        <ul>
+          <li><span>
+              <ion-icon name="arrow-forward-outline"></ion-icon>
+            </span><a href="/index.html">Home</a>
+          </li>
 
-            <li><span><ion-icon name="arrow-forward-outline"></ion-icon></span><a href="/about.html">About</a>
-            </li>
+          <li><span>
+              <ion-icon name="arrow-forward-outline"></ion-icon>
+            </span><a href="/about.html">About</a>
+          </li>
 
-            <li><span><ion-icon name="arrow-forward-outline"></ion-icon></span><a href="/service.html">Services</a>
-            </li>
+          <li><span>
+              <ion-icon name="arrow-forward-outline"></ion-icon>
+            </span><a href="/service.html">Services</a>
+          </li>
 
-            <li><span><ion-icon name="arrow-forward-outline"></ion-icon></span><a href="#">Portfolio</a>
-            </li>
+          <li><span>
+              <ion-icon name="arrow-forward-outline"></ion-icon>
+            </span><a href="#">Portfolio</a>
+          </li>
 
-            <li><span><ion-icon name="arrow-forward-outline"></ion-icon></span><a href="/contact.html">Contact</a>
-            </li>
-          </ul>
-        </div>
-        <!-- end  -->
-        <div class="f-services">
-          <h3>Services</h3>
-          <ul>
-            <li><span><ion-icon name="arrow-forward-outline"></ion-icon></span><a href="#">Web Design</a>
-            </li>
+          <li><span>
+              <ion-icon name="arrow-forward-outline"></ion-icon>
+            </span><a href="/contact.html">Contact</a>
+          </li>
+        </ul>
+      </div>
+      <!-- end  -->
+      <div class="f-services">
+        <h3>Services</h3>
+        <ul>
+          <li><span>
+              <ion-icon name="arrow-forward-outline"></ion-icon>
+            </span><a href="#">Web Design</a>
+          </li>
 
-            <li><span><ion-icon name="arrow-forward-outline"></ion-icon></span><a href="#">Web Development</a>
-            </li>
+          <li><span>
+              <ion-icon name="arrow-forward-outline"></ion-icon>
+            </span><a href="#">Web Development</a>
+          </li>
 
-            <li><span><ion-icon name="arrow-forward-outline"></ion-icon></span><a href="#">Mern Project</a>
-            </li>
+          <li><span>
+              <ion-icon name="arrow-forward-outline"></ion-icon>
+            </span><a href="#">Mern Project</a>
+          </li>
 
-            <li><span><ion-icon name="arrow-forward-outline"></ion-icon></span><a href="#">Online Classes</a>
-            </li>
+          <li><span>
+              <ion-icon name="arrow-forward-outline"></ion-icon>
+            </span><a href="#">Online Classes</a>
+          </li>
 
-            <li><span><ion-icon name="arrow-forward-outline"></ion-icon></span><a href="#">Youtube Course</a>
-            </li>
-          </ul>
-        </div>
-        <!-- end  -->
-        <div class="f-address">
-          <h3>Have a Questions?</h3>
-          <address>
-            <div>
-              <p>
-                <span><ion-icon name="location-outline"></ion-icon></span>
-                Dhaka, Bangladesh
-              </p>
-            </div>
+          <li><span>
+              <ion-icon name="arrow-forward-outline"></ion-icon>
+            </span><a href="#">Youtube Course</a>
+          </li>
+        </ul>
+      </div>
+      <!-- end  -->
+      <div class="f-address">
+        <h3>Have a Questions?</h3>
+        <address>
+          <div>
+            <p>
+              <span>
+                <ion-icon name="location-outline"></ion-icon>
+              </span>
+              Dhaka, Bangladesh
+            </p>
+          </div>
 
-            <div>
-              <p>
-                <span><ion-icon name="call-outline"></ion-icon></span>
-                <a href="tel:+88012345678">+880 12345678</a>
-              </p>
-            </div>
+          <div>
+            <p>
+              <span>
+                <ion-icon name="call-outline"></ion-icon>
+              </span>
+              <a href="tel:+88012345678">+880 12345678</a>
+            </p>
+          </div>
 
-            <div>
-              <p>
-                <span><ion-icon name="mail-outline"></ion-icon></span>
-                <a href="mailto:lotifurshabbir54@gmail.com">lotifurshabbir54@gmail.com</a>
-              </p>
-            </div>
+          <div>
+            <p>
+              <span>
+                <ion-icon name="mail-outline"></ion-icon>
+              </span>
+              <a href="mailto:lotifurshabbir54@gmail.com">lotifurshabbir54@gmail.com</a>
+            </p>
+          </div>
 
-          </address>
-        </div>
-        <!-- end  -->
+        </address>
+      </div>
+      <!-- end  -->
+    </div>
+
+
+    <div class="container">
+      <div class="f-social-icons">
+        <a href="https://www.facebook.com/golirProgrammer/" target="_blank">
+          <ion-icon class="icons" name="logo-facebook"></ion-icon>
+        </a>
+
+        <a href="https://www.instagram.com/lotifur_shabbir/" target="_blank">
+          <ion-icon class="icons" name="logo-instagram"></ion-icon>
+        </a>
+
+        <a href="https://twitter.com/shabbirlotifur/" target="_blank">
+          <ion-icon class="icons" name="logo-twitter"></ion-icon>
+        </a>
       </div>
 
-
-      <div class="container">
-        <div class="f-social-icons">
-          <a href="https://www.facebook.com/golirProgrammer/" target="_blank">
-            <ion-icon class="icons" name="logo-facebook"></ion-icon>
-          </a>
-
-          <a href="https://www.instagram.com/lotifur_shabbir/" target="_blank">
-            <ion-icon class="icons" name="logo-instagram"></ion-icon>
-          </a>
-
-          <a href="https://twitter.com/shabbirlotifur/" target="_blank">
-            <ion-icon class="icons" name="logo-twitter"></ion-icon>
-          </a>
-        </div>
-
-        <div class="f-credits">
-          <p>Copyright ©2022 All rights reserved | <a href="https://www.instagram.com/lotifur_shabbir/" class="credit" target="_blank">@LotifurShabbir</a></p>
-        </div>
+      <div class="f-credits">
+        <p>Copyright ©2022 All rights reserved | <a href="https://www.instagram.com/lotifur_shabbir/" class="credit"
+            target="_blank">@LotifurShabbir</a></p>
       </div>
-    </footer>
+    </div>
+  </footer>
 
 
 
